Fixed a minor bug in grab initial charging data - index2

--- a/partials/nav.ejs
+++ b/partials/nav.ejs
@@ -20,6 +20,7 @@
 
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <script src="../delta_dashboard/public/js/jquery-3.3.1.js"></script>
     <!--Import materialize.css-->
     <link type="text/css" rel="stylesheet" href="../delta_dashboard/public/css/materialize.css"
           media="screen,projection"/>
@@ -57,6 +58,7 @@
 
     </div>
 </nav>
+<script type="text/javascript" src="../delta_dashboard/public/js/materialize.min.js"></script>
 
 <script>
     firebase.auth().onAuthStateChanged(function (user) {
