--- a/views/history.ejs
+++ b/views/history.ejs
@@ -13,7 +13,8 @@
             width: 100%;
             display: flex;
         }
-        #loading_id{
+
+        #loading_id {
             margin: auto;
             text-align: center;
         }
@@ -70,14 +71,14 @@
 
     <div id="master_row">
         <!--<div class="row">-->
-            <!--<div class="col s6 offset-s3">-->
+        <!--<div class="col s6 offset-s3">-->
 
-                <!--<p class=center-align>-->
-                    <!--<a class="waves-effect waves-light btn" onclick="request_data(this.id)"-->
-                       <!--id="all_data_request_button">Download All Data</a>-->
-                <!--</p>-->
+        <!--<p class=center-align>-->
+        <!--<a class="waves-effect waves-light btn" onclick="request_data(this.id)"-->
+        <!--id="all_data_request_button">Download All Data</a>-->
+        <!--</p>-->
 
-            <!--</div>-->
+        <!--</div>-->
         <!--</div>-->
 
         <div class="divider"></div>
@@ -110,18 +111,20 @@
                 </div>
             </div>
 
-            <div class="col s12" id="chart_tabs">
-                <ul class="tabs center-align">
-                    <li class="tab col s4">
-                        <a href="#history_chart_tab" class="active">Line Chart</a>
-                    </li>
-                    <li class="tab col s4">
-                        <a href="#sankey_tab">Sankey Diagram</a>
-                    </li>
-                    <li class="tab col s4">
-                        <a href="#download_tab">Download Day's Data</a>
-                    </li>
-                </ul>
+            <div class="row">
+                <div class="col s12" id="chart_tabs">
+                    <ul class="tabs center-align">
+                        <li class="tab col s4">
+                            <a href="#history_chart_tab" class="active">Line Chart</a>
+                        </li>
+                        <li class="tab col s4">
+                            <a href="#sankey_tab">Sankey Diagram</a>
+                        </li>
+                        <li class="tab col s4">
+                            <a href="#download_tab">Download Day's Data</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
 
