Login now redirects to index2

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -57,7 +57,7 @@
             credentialHelper: firebaseui.auth.CredentialHelper.NONE,
             // Will use popup for IDP Providers sign-in flow instead of the default, redirect.
             signInFlow: 'redirect',
-            signInSuccessUrl: '/delta_dashboard',
+            signInSuccessUrl: '/delta_dashboard/index2',
             signInOptions: [
                 firebase.auth.EmailAuthProvider.PROVIDER_ID,
             ],
