Initial commit for the admin dashboard. Upgraded the Firebase library from 4.9.0 to 5.8.2

--- a/views/charging_history.ejs
+++ b/views/charging_history.ejs
@@ -44,7 +44,12 @@
 
     <script src="../delta_dashboard/public/js/jquery-3.3.1.js"></script>
     <script src="../delta_dashboard/public/js/moment.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/4.9.0/firebase.js"></script>
+    <!-- Firebase App is always required and must be first -->
+    <script src="https://www.gstatic.com/firebasejs/5.8.2/firebase-app.js"></script>
+
+    <!-- Add additional services that you want to use -->
+    <script src="https://www.gstatic.com/firebasejs/5.8.2/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.8.2/firebase-database.js"></script>
     <script>
         // Initialize Firebase
         let config = {
