--- a/partials/nav.ejs
+++ b/partials/nav.ejs
@@ -1,101 +1,59 @@
+<!DOCTYPE html>
+
+<html lang="en">
+
 <head>
-
-    <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <style>
-        #logo {
-            width: 25%;
-            /*height: 7%;*/
-            /*margin: auto;*/
-            padding-left: 10px;
-            /*display: inline-block;*/
-        }
 
-        #imgWrapper {
-            /*max-width: 0px;*/
-            display: inline-block;
-            width: 25%
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="/delta_dashboard/public/css/style.css">
 
-    <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <script src="../delta_dashboard/public/js/jquery-3.3.1.js"></script>
-    <!--Import materialize.css-->
-    <link type="text/css" rel="stylesheet" href="../delta_dashboard/public/css/materialize.css"
+    <script src="/delta_dashboard/public/js/jquery-3.3.1.js"></script>
+    <link type="text/css" rel="stylesheet" href="/delta_dashboard/public/css/materialize.css"
           media="screen,projection"/>
 
 </head>
 
+<!-- This block will take an input from NodeJS to see if we have a custom UID or not -->
+<% if(typeof custom_uid !== "undefined") { %>
+    <div id="custom-uid-div" custom-uid=<%= custom_uid %>></div>
+<% } else { %>
+    <div id="custom-uid-div" custom-uid=""></div>
+<% } %>
+<!------------------------------------------------------------------------------------------>
+
 <ul id="user_dropdown" class="dropdown-content">
-    <li><a href="/delta_dashboard/profile">Settings</a></li>
-    <li><a href="#" onclick="signOut()">Sign Out</a></li>
+    <li><a href="/delta_dashboard/profile" id="settings_link">Settings</a></li>
+    <li><a href="#" id="signOutButton">Sign Out</a></li>
 </ul>
 <ul id="archive_dropdown" class="dropdown-content">
-    <li><a href="/delta_dashboard/history">Inverter History</a></li>
+    <li><a href="/delta_dashboard/history" id="archive_link">Inverter History</a></li>
     <li><a href="/delta_dashboard/charging_history" id="charging_history_link">Previous Charging Sessions</a></li>
 </ul>
 
 <nav>
-    <!--<a class="brand-logo"><img class="responsive-img" id="logo" src="../delta_dashboard/public/img/delta_logo.png"></a>-->
+    <!--<a class="brand-logo"><img class="responsive-img" id="logo" src="/delta_dashboard/public/img/delta_logo.png"></a>-->
 
-    <div class="nav-wrapper blue lighten-2">
-        <div id="imgWrapper" class="brand-logo left">
+    <div class="nav-wrapper blue lighten-2" id="nav-wrapper-div">
+        <div id="logoImgWrapper" class="brand-logo left">
             <a class="brand-logo left"><img class="responsive-img" id="logo"
-                                            src="../delta_dashboard/public/img/delta_logo.png"></a>
+                                            src="/delta_dashboard/public/img/delta_logo.png"></a>
         </div>
 
-        <!--<a href="#" class="brand-logo">Logo</a>-->
         <ul id="nav-mobile" class="right hide-on-med-and-down">
             <li><a href="/delta_dashboard" id="dashboard_link">Dashboard</a></li>
             <li><a class="archive_dropdown_trigger" href="#!" data-target="archive_dropdown">Archive</a>
-            <li><a href="/delta_dashboard/hardware_info">Hardware Info</a></li>
+            <li><a href="/delta_dashboard/hardware_info" id="hardware_info_link">Hardware Info</a></li>
             <li><a class="user_dropdown_trigger" href="#!" id="displayName" data-target="user_dropdown"></a>
             </li>
         </ul>
-        <!--<img src="../delta_dashboard/public/img/delta_logo.png" id="logo">-->
-
 
     </div>
 </nav>
-<script type="text/javascript" src="../delta_dashboard/public/js/materialize.min.js"></script>
 
-<script>
-    firebase.auth().onAuthStateChanged(function (user) {
-        let archive_dropdown_elems = document.querySelectorAll('.archive_dropdown_trigger');
-        let archive_dropdown_instances = M.Dropdown.init(archive_dropdown_elems, {
-            coverTrigger: false,
-            constrainWidth: false,
-            hover: true,
-            outDuration: 150
-        });
-        let user_dropdown_elems = document.querySelectorAll('.user_dropdown_trigger');
-        let user_dropdown_instances = M.Dropdown.init(user_dropdown_elems, {
-            coverTrigger: false,
-            hover: true,
-            outDuration: 150
+<script type="text/javascript" src="/delta_dashboard/public/js/materialize.min.js"></script>
 
-        });
-        // Get the user's displayname and put it in the nav bar
-        document.getElementById("displayName").innerHTML = "<b>" + user.displayName + "</b>"
+<script src="/delta_dashboard/public/js/shared.js"></script>
+<script src="/delta_dashboard/public/js/nav.js"></script>
 
-        // Now we need to determine what kind of system this account is running
-        let db = firebase.database()
-
-        // If this system is running a multiple charger system, then we need to change the links to index2 etc...
-        db.ref(`users/${user.uid}/system_type`).once("value", function (snapshot) {
-            if (snapshot.val() === "multiple") {
-                document.getElementById("dashboard_link").href = '/delta_dashboard/index2'
-                document.getElementById("charging_history_link").href = '/delta_dashboard/charging_history2'
-            }
-        })
-
-        db.ref(`users/${user.uid}/user_info/account_type`).once("value", function (snapshot) {
-            if (snapshot.val() === "admin") {
-                $("#nav-mobile").prepend(`<li><a href="/delta_dashboard/adminindex">Admin Dashboard</a></li>`)
-            }
-        })
-    });
-
-
-</script>
+</html>
