--- a/views/charging_history.ejs
+++ b/views/charging_history.ejs
@@ -2,71 +2,21 @@
 <html>
 
 <head>
-    <style>
-        #loading_id {
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            margin: auto;
-        }
+    <link rel="stylesheet" type="text/css" href="/delta_dashboard/public/css/style.css">
 
-        .tab a.active {
-            color: rgb(252, 234, 37) !important;
-            background-color: #FFFFFF !important;
-        }
+    <script src="/delta_dashboard/public/js/jquery-3.3.1.js"></script>
+    <script src="/delta_dashboard/public/js/moment.js"></script>
 
-        .tabs .tab a:hover {
-            background-color: #FFFFFF !important;
-            color: #64b4f6 !important;
-        }
-
-        .tabs .tab a {
-            color: #64b4f6 !important;
-
-        }
-
-        .tabs .indicator {
-            background-color: #64b4f6 !important;
-        }
-
-    </style>
-
-    <!--&lt;!&ndash;Import Google Icon Font&ndash;&gt;-->
-    <!--<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">-->
-    <!--&lt;!&ndash;Import materialize.css&ndash;&gt;-->
-    <!--<link type="text/css" rel="stylesheet" href="../delta_dashboard/public/css/materialize.css"-->
-    <!--media="screen,projection"/>-->
-
-    <!--Let browser know website is optimized for mobile-->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-
-    <script src="../delta_dashboard/public/js/jquery-3.3.1.js"></script>
-    <script src="../delta_dashboard/public/js/moment.js"></script>
-    <!-- Firebase App is always required and must be first -->
     <script src="https://www.gstatic.com/firebasejs/5.8.2/firebase-app.js"></script>
-
-    <!-- Add additional services that you want to use -->
     <script src="https://www.gstatic.com/firebasejs/5.8.2/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.8.2/firebase-database.js"></script>
-    <script>
-        // Initialize Firebase
-        let config = {
-            apiKey: "AIzaSyCaxTOBofd7qrnbas5gGsZcuvy_zNSi_ik",
-            authDomain: "smart-charging-app.firebaseapp.com",
-            databaseURL: "https://smart-charging-app.firebaseio.com",
-            projectId: "smart-charging-app",
-            storageBucket: "",
-            messagingSenderId: "896921007938"
-        };
-        firebase.initializeApp(config);
-    </script>
-    <script src="../delta_dashboard/public/bower_components/chart.js/dist/Chart.min.js"></script>
-    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-    <script src="../delta_dashboard/public/js/hammer.min.js"></script>
+    <script src="/delta_dashboard/public/js/initialiseFirebase.js"></script>
 
-    <script src="../delta_dashboard/public/bower_components/chartjs-plugin-zoom/chartjs-plugin-zoom.js"></script>
+    <script src="/delta_dashboard/public/bower_components/chart.js/dist/Chart.min.js"></script>
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <script src="/delta_dashboard/public/js/hammer.min.js"></script>
+
+    <script src="/delta_dashboard/public/bower_components/chartjs-plugin-zoom/chartjs-plugin-zoom.js"></script>
 
 </head>
 
@@ -216,8 +166,8 @@
     </div>
 </div>
 
-<script type="text/javascript" src="../delta_dashboard/public/js/materialize.min.js"></script>
-<script type="application/javascript" src="../delta_dashboard/public/js/charging_history.js"></script>
+<script type="text/javascript" src="/delta_dashboard/public/js/materialize.min.js"></script>
+<script type="application/javascript" src="/delta_dashboard/public/js/charging_history.js"></script>
 
 
 </body>
