--- a/views/charging_history2.ejs
+++ b/views/charging_history2.ejs
@@ -1,122 +1,64 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <style>
-        #loading_id {
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            margin: auto;
-        }
+    <title>Delta Solar Charger Charging History</title>
 
-        .tab a.active {
-            color: rgb(252, 234, 37) !important;
-            background-color: #FFFFFF !important;
-        }
+    <link rel="stylesheet" type="text/css" href="/delta_dashboard/public/css/style.css">
 
-        .tabs .tab a:hover {
-            background-color: #FFFFFF !important;
-            color: #64b4f6 !important;
-        }
+    <script type="text/javascript" src="/delta_dashboard/public/js/materialize.min.js"></script>
+    <script src="/delta_dashboard/public/js/moment.js"></script>
 
-        .tabs .tab a {
-            color: #64b4f6 !important;
-
-        }
-
-        .tabs .indicator {
-            background-color: #64b4f6 !important;
-        }
-
-        .modal {
-            width: 70% !important;
-            max-height: 80% !important;
-        }
-
-        /*#charging_graph {*/
-            /*max-height: 80%*/
-        /*}*/
-
-    </style>
-
-    <!--&lt;!&ndash;Import Google Icon Font&ndash;&gt;-->
-    <!--<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">-->
-    <!--&lt;!&ndash;Import materialize.css&ndash;&gt;-->
-    <!--<link type="text/css" rel="stylesheet" href="../delta_dashboard/public/css/materialize.css"-->
-    <!--media="screen,projection"/>-->
-
-    <!--Let browser know website is optimized for mobile-->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script type="text/javascript" src="../delta_dashboard/public/js/materialize.min.js"></script>
-    <script src="../delta_dashboard/public/js/moment.js"></script>
-
-    <!-- Firebase App is always required and must be first -->
     <script src="https://www.gstatic.com/firebasejs/5.8.2/firebase-app.js"></script>
-
-    <!-- Add additional services that you want to use -->
     <script src="https://www.gstatic.com/firebasejs/5.8.2/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.8.2/firebase-database.js"></script>
+    <script src="/delta_dashboard/public/js/initialiseFirebase.js"></script>
 
-    <script>
-        // Initialize Firebase
-        let config = {
-            apiKey: "AIzaSyCaxTOBofd7qrnbas5gGsZcuvy_zNSi_ik",
-            authDomain: "smart-charging-app.firebaseapp.com",
-            databaseURL: "https://smart-charging-app.firebaseio.com",
-            projectId: "smart-charging-app",
-            storageBucket: "",
-            messagingSenderId: "896921007938"
-        };
-        firebase.initializeApp(config);
-    </script>
-    <script src="../delta_dashboard/public/bower_components/chart.js/dist/Chart.min.js"></script>
+    <script src="/delta_dashboard/public/bower_components/chart.js/dist/Chart.min.js"></script>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-    <script src="../delta_dashboard/public/js/hammer.min.js"></script>
+    <script src="/delta_dashboard/public/js/hammer.min.js"></script>
 
-    <script src="../delta_dashboard/public/bower_components/chartjs-plugin-zoom/chartjs-plugin-zoom.js"></script>
+    <script src="/delta_dashboard/public/bower_components/chartjs-plugin-zoom/chartjs-plugin-zoom.js"></script>
 
 </head>
 
 <% include ../partials/nav.ejs %>
 
 <body>
-    <!--<div class="container">-->
-    <h1 class="center-align">Charging History</h1>
 
-    <div class="col s12" id="preloader">
-        <div class="preloader-wrapper big active" id="loading_id">
-            <div class="spinner-layer spinner-blue-only">
-                <div class="circle-clipper left">
-                    <div class="circle"></div>
-                </div>
-                <div class="gap-patch">
-                    <div class="circle"></div>
-                </div>
-                <div class="circle-clipper right">
-                    <div class="circle"></div>
-                </div>
+<h1 class="center-align">Charging History</h1>
+
+<div class="col s12" id="preloader">
+    <div class="preloader-wrapper big active" id="loading_id">
+        <div class="spinner-layer spinner-blue-only">
+            <div class="circle-clipper left">
+                <div class="circle"></div>
+            </div>
+            <div class="gap-patch">
+                <div class="circle"></div>
+            </div>
+            <div class="circle-clipper right">
+                <div class="circle"></div>
             </div>
         </div>
     </div>
+</div>
 
-    <div class="row" id="master_row">
-        <div class="col s2 push-l5 pull-l5">
-            <div class="input-field">
-                <input id="date_input" type="text" class="datepicker">
-                <label for="date_input">Select a Date</label>
-            </div>
+<div class="row" id="master_row">
+    <div class="col s2 push-l5 pull-l5">
+        <div class="input-field">
+            <input id="date_input" type="text" class="datepicker">
+            <label for="date_input">Select a Date</label>
         </div>
-
-    </div>
-    <div class="row" id="charge_sessions_row">
     </div>
 
-    <script src="../delta_dashboard/public/js/jquery-3.3.1.js"></script>
+</div>
+<div class="row" id="charge_sessions_row">
+</div>
 
-    <script type="application/javascript" src="../delta_dashboard/public/js/charging_history2.js"></script>
+<script src="/delta_dashboard/public/js/jquery-3.3.1.js"></script>
+
+<script type="application/javascript" src="/delta_dashboard/public/js/charging_history2.js"></script>
 
 
 </body>
