--- a/views/hardware_info.ejs
+++ b/views/hardware_info.ejs
@@ -1,58 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-AU">
 
 <head>
-    <style>
-        #loading_id {
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            margin: auto;
-        }
+    <title>Delta Solar Charger Hardware Info</title>
 
-        .dot {
-            height: 20px;
-            width: 20px;
-            /*background-color: #ff0000;*/
-            border-radius: 50%;
-            display: inline-block;
-        }
-
-        .modal {
-            width: 70% !important;
-            max-height: 80% !important;
-        }
-
-    </style>
+    <link rel="stylesheet" type="text/css" href="/delta_dashboard/public/css/style.css">
 
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
-    <script src="../delta_dashboard/public/js/jquery-3.3.1.js"></script>
-    <script src="../delta_dashboard/public/js/moment.js"></script>
+    <script src="/delta_dashboard/public/js/jquery-3.3.1.js"></script>
+    <script src="/delta_dashboard/public/js/moment.js"></script>
 
-    <!-- Firebase App is always required and must be first -->
     <script src="https://www.gstatic.com/firebasejs/5.8.2/firebase-app.js"></script>
-
-    <!-- Add additional services that you want to use -->
     <script src="https://www.gstatic.com/firebasejs/5.8.2/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.8.2/firebase-database.js"></script>
+    <script src="/delta_dashboard/public/js/initialiseFirebase.js"></script>
 
-    <script>
-        // Initialize Firebase
-        let config = {
-            apiKey: "AIzaSyCaxTOBofd7qrnbas5gGsZcuvy_zNSi_ik",
-            authDomain: "smart-charging-app.firebaseapp.com",
-            databaseURL: "https://smart-charging-app.firebaseio.com",
-            projectId: "smart-charging-app",
-            storageBucket: "",
-            messagingSenderId: "896921007938"
-        };
-        firebase.initializeApp(config);
-    </script>
-    <script src="../delta_dashboard/public/bower_components/chart.js/dist/Chart.min.js"></script>
+    <script src="/delta_dashboard/public/bower_components/chart.js/dist/Chart.min.js"></script>
 
 </head>
 
@@ -126,8 +91,8 @@
     </div>
 </div>
 
-<script type="text/javascript" src="../delta_dashboard/public/js/materialize.min.js"></script>
-<script type="application/javascript" src="../delta_dashboard/public/js/hardware_info.js"></script>
+<script type="text/javascript" src="/delta_dashboard/public/js/materialize.min.js"></script>
+<script type="application/javascript" src="/delta_dashboard/public/js/hardware_info.js"></script>
 
 </body>
 
