--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,74 +1,32 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
+    <title>Delta Solar Charger Login</title>
+
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
-    <link type="text/css" rel="stylesheet" href="../delta_dashboard/public/css/materialize.css" media="screen,projection" />
+    <link type="text/css" rel="stylesheet" href="/delta_dashboard/public/css/materialize.css" media="screen,projection" />
 
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>EVCS Page</title>
 
 </head>
 
-<script src="https://www.gstatic.com/firebasejs/4.9.0/firebase.js"></script>
-<script>
-    // Initialize Firebase
-    var config = {
-        apiKey: "AIzaSyCaxTOBofd7qrnbas5gGsZcuvy_zNSi_ik",
-        authDomain: "smart-charging-app.firebaseapp.com",
-        databaseURL: "https://smart-charging-app.firebaseio.com",
-        projectId: "smart-charging-app",
-        storageBucket: "",
-        messagingSenderId: "896921007938"
-    };
-    firebase.initializeApp(config);
-</script>
+<script src="https://www.gstatic.com/firebasejs/5.8.2/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/5.8.2/firebase-auth.js"></script>
+<script src="https://www.gstatic.com/firebasejs/5.8.2/firebase-database.js"></script>
+<script src="/delta_dashboard/public/js/initialiseFirebase.js"></script>
 
 <script src="https://cdn.firebase.com/libs/firebaseui/2.6.1/firebaseui.js"></script>
 <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/2.5.1/firebaseui.css" />
 
 <body>
-
-    <script>
-        let ui = new firebaseui.auth.AuthUI(firebase.auth());
-    </script>
-
     <h1 class="center-align">Delta Solar Charging Station Login</h1>
     <div id="firebaseui-auth-container"></div>
-    <script>
-        let uiConfig = {
-            callbacks: {
-                signInSuccess: function (currentUser, credential, redirectUrl) {
-                    // User successfully signed in.
-                    // Return type determines whether we continue the redirect automatically
-                    // or whether we leave that to developer to handle.
-                    return true;
-                },
-                uiShown: function () {
-                    // The widget is rendered.
-                    // Hide the loader.
-                    document.getElementById('loader').style.display = 'none';
-                }
-            },
-            // Disable AccountChooser - annoying! Accounts should already be made in the app
-            credentialHelper: firebaseui.auth.CredentialHelper.NONE,
-            // Will use popup for IDP Providers sign-in flow instead of the default, redirect.
-            signInFlow: 'redirect',
-            signInSuccessUrl: '/delta_dashboard/index2',
-            signInOptions: [
-                firebase.auth.EmailAuthProvider.PROVIDER_ID,
-            ],
-            // Terms of service url.
-            tosUrl: '<your-tos-url>',
-
-        };
-        ui.start('#firebaseui-auth-container', uiConfig);
-
-    </script>
 </body>
 
+<script src="/delta_dashboard/public/js/login.js"></script>
 
 </html>
