Finished implementing custom UIDs across the whole website. Completely removed all inline scripts and styling Modified the NodeJS backend to accept all UIDs

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -90,8 +90,7 @@
                                         <select id="chargemode_select" class="center-align">
                                             <option value="" disabled selected>Choose your option</option>
                                             <option value="PV_with_BT">Standalone: PV with Battery Backup</option>
-                                            <option value="MAX_CHARGE_STANDALONE">Standalone: Maximise EV Charge
-                                                Rate
+                                            <option value="MAX_CHARGE_STANDALONE">Standalone: Maximise EV Charge Rate
                                             </option>
                                             <option value="PV_no_BT">BETA: PV Standalone without BT</option>
                                             <option value="MAX_CHARGE_GRID">Grid Connected: Maximise EV Charge Rate
