The nav bar's colour is now set through EJS so it reacts instantly. The pinned bar's colour is now consistent with the nav bar

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -68,7 +68,7 @@
 
 /* Style of the title when pinned */
 .title_pinned {
-    background-color: rgba(100, 181, 246, 0.85);
+    /*background-color: rgba(246, 137, 132, 0.85);*/
     color: white;
     font-size: 3rem;
     padding: 15px
