--- a/partials/nav.ejs
+++ b/partials/nav.ejs
@@ -34,7 +34,9 @@
 <nav>
     <!--<a class="brand-logo"><img class="responsive-img" id="logo" src="/delta_dashboard/public/img/delta_logo.png"></a>-->
 
-    <div class="nav-wrapper blue lighten-2" id="nav-wrapper-div">
+    <!-- The colour of the nav bar will be defined by whether or not we have supplied a custom UID to the URL -->
+    <div class="nav-wrapper <% if (typeof custom_uid !== "undefined") { %>red <% } else { %> blue <% } %>lighten-2"
+         id="nav-wrapper-div">
         <div id="logoImgWrapper" class="brand-logo left">
             <a class="brand-logo left"><img class="responsive-img" id="logo"
                                             src="/delta_dashboard/public/img/delta_logo.png"></a>
