--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,29 +4,48 @@
 <head>
     <title>Delta Solar Charger Login</title>
 
+    <link rel="stylesheet" type="text/css" href="/delta_dashboard/public/css/style.css">
+
+    <script src="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.js"></script>
+    <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.css"/>
+
+    <script src="https://www.gstatic.com/firebasejs/5.8.2/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.8.2/firebase-auth.js"></script>
+    <script src="/delta_dashboard/public/js/initialiseFirebase.js"></script>
+
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
-    <link type="text/css" rel="stylesheet" href="/delta_dashboard/public/css/materialize.css" media="screen,projection" />
+    <link type="text/css" rel="stylesheet" href="/delta_dashboard/public/css/materialize.css"
+          media="screen,projection"/>
 
     <!--Let browser know website is optimized for mobile-->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
 </head>
 
-<script src="https://www.gstatic.com/firebasejs/5.8.2/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/5.8.2/firebase-auth.js"></script>
-<script src="https://www.gstatic.com/firebasejs/5.8.2/firebase-database.js"></script>
-<script src="/delta_dashboard/public/js/initialiseFirebase.js"></script>
-
-<script src="https://cdn.firebase.com/libs/firebaseui/2.6.1/firebaseui.js"></script>
-<link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/2.5.1/firebaseui.css" />
 
 <body>
-    <h1 class="center-align">Delta Solar Charging Station Login</h1>
-    <div id="firebaseui-auth-container"></div>
+<h1 class="center-align">Delta Solar Charging Station Login</h1>
+
+<div class="preloader-wrapper big active" id="loading_id">
+    <div class="spinner-layer spinner-blue-only">
+        <div class="circle-clipper left">
+            <div class="circle"></div>
+        </div>
+        <div class="gap-patch">
+            <div class="circle"></div>
+        </div>
+        <div class="circle-clipper right">
+            <div class="circle"></div>
+        </div>
+    </div>
+</div>
+
+<div id="firebaseui-auth-container"></div>
 </body>
 
 <script src="/delta_dashboard/public/js/login.js"></script>
+
 
 </html>
