Added the ability to link slave accounts Added account type information to preferences Added a random colour library for EV charging chart

--- a/views/index2.ejs
+++ b/views/index2.ejs
@@ -16,6 +16,7 @@
 
     <script src="/delta_dashboard/public/bower_components/chart.js/dist/Chart.min.js"></script>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/randomcolor/0.5.4/randomColor.min.js"></script>
 
 </head>
 
