Dashboard now can detect if data is up to date. It will hide rows and display toasts if it is not Changed the live chart length to 90 points

--- a/partials/nav.ejs
+++ b/partials/nav.ejs
@@ -28,7 +28,7 @@
 </ul>
 <ul id="archive_dropdown" class="dropdown-content">
     <li><a href="/delta_dashboard/history" id="archive_link">Inverter History</a></li>
-    <li><a href="/delta_dashboard/charging_history" id="charging_history_link">Previous Charging Sessions</a></li>
+    <li><a href="/delta_dashboard/charging_history2" id="charging_history_link">Previous Charging Sessions</a></li>
 </ul>
 
 <nav>
@@ -39,11 +39,11 @@
          id="nav-wrapper-div">
         <div id="logoImgWrapper" class="brand-logo left">
             <a class="brand-logo left"><img class="responsive-img" id="logo"
-                                            src="/delta_dashboard/public/img/delta_logo.png"></a>
+                                            src="/delta_dashboard/public/img/delta_logo.png" alt=""></a>
         </div>
 
         <ul id="nav-mobile" class="right hide-on-med-and-down">
-            <li><a href="/delta_dashboard" id="dashboard_link">Dashboard</a></li>
+            <li><a href="/delta_dashboard/index2" id="dashboard_link">Dashboard</a></li>
             <li><a class="archive_dropdown_trigger" href="#!" data-target="archive_dropdown">Archive</a>
             <li><a href="/delta_dashboard/hardware_info" id="hardware_info_link">Hardware Info</a></li>
             <li><a class="user_dropdown_trigger" href="#!" id="displayName" data-target="user_dropdown"></a>
