--- a/views/index2.ejs
+++ b/views/index2.ejs
@@ -193,7 +193,7 @@
     <!-------------------------------------------------------------------------------------------------------------->
 
     <!-------------------------------------------------------------------------------------------------------------->
-    <!------------------------------------------- FOURTH ROW-------------------------------------------------------->
+    <!------------------------------------------- THIRD ROW-------------------------------------------------------->
     <div class="col s12 m12 l12">
         <div class="card green lighten-2 z-depth-2 hoverable">
             <div class="card-content green lighten-1">
@@ -210,11 +210,11 @@
 
         </div>
     </div>
-    <!------------------------------------------- FOURTH ROW--------------------------------------------------------->
-    <!-------------------------------------------------------------------------------------------------------------->
     <!------------------------------------------- THIRD ROW--------------------------------------------------------->
+    <!-------------------------------------------------------------------------------------------------------------->
+    <!------------------------------------------- FOURTH ROW--------------------------------------------------------->
     <div class="col s12 m4 l4">
-        <div class="card amber lighten-3 z-depth-2 hoverable">
+        <div class="card amber lighten-3 z-depth-2 hoverable fourth_row_card">
             <div class="card-content amber lighten-2">
                     <span class="card-title activator black-text text-darken-4 center-align">
                         Solar Power
@@ -244,7 +244,7 @@
     </div>
 
     <div class="col s12 m4 l4">
-        <div class="card cyan lighten-3 z-depth-2 hoverable">
+        <div class="card cyan lighten-3 z-depth-2 hoverable fourth_row_card">
             <div class="card-content cyan lighten-2">
                     <span class="card-title activator black-text text-darken-4 center-align">
                         Grid Export/Import
@@ -274,7 +274,7 @@
     </div>
 
     <div class="col s12 m4 l4">
-        <div class="card green lighten-3 z-depth-2 hoverable">
+        <div class="card green lighten-3 z-depth-2 hoverable fourth_row_card">
             <div class="card-content green lighten-2">
                     <span class="card-title activator black-text text-darken-4 center-align">
                         Battery Power
@@ -302,7 +302,7 @@
             </div>
         </div>
     </div>
-    <!------------------------------------------- THIRD ROW--------------------------------------------------------->
+    <!------------------------------------------- FOURTH ROW--------------------------------------------------------->
 </div>
 
 <script type="text/javascript" src="/delta_dashboard/public/js/materialize.min.js"></script>
