Added initial security camera support

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -188,6 +188,13 @@
                 </div>
             </li>
 
+            <li id="security_camera_collapsible">
+                <div class="collapsible-header"><i class="material-icons">videocam</i>Configure Security Camera</div>
+                <div class="collapsible-body" id="security_camera_collapsible">
+                    <div id=""></div>
+                </div>
+            </li>
+
         </ul>
 
 
